--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: sqltree_schema
 description: Schema support for the sqltree library.
-version: 0.0.1+1
+version: 0.1.0
 author: Roberto Tassi <roberto.tassi@fromlabs.org>
 homepage: https://github.com/fromlabs/sqltree_schema
 
